// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prefer: return=minimal 1`] = `null`;

exports[`allow ordering on JSON column 1`] = `
Array [
  Object {
    "age_range": "[1,2)",
    "catchphrase": "'cat' 'fat'",
    "data": null,
    "status": "ONLINE",
    "username": "supabot",
  },
  Object {
    "age_range": "[25,35)",
    "catchphrase": "'bat' 'cat'",
    "data": null,
    "status": "OFFLINE",
    "username": "kiwicopple",
  },
  Object {
    "age_range": "[25,35)",
    "catchphrase": "'bat' 'rat'",
    "data": null,
    "status": "ONLINE",
    "username": "awailas",
  },
  Object {
    "age_range": "[20,30)",
    "catchphrase": "'fat' 'rat'",
    "data": null,
    "status": "ONLINE",
    "username": "dragarcia",
  },
]
`;

exports[`basic insert, update, delete basic delete 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete basic delete 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete basic insert 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`basic insert, update, delete basic insert 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete basic update 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete basic update 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete bulk insert 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`basic insert, update, delete bulk insert 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 4,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 5,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic insert, update, delete upsert 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`basic insert, update, delete upsert 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`basic select table 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`connection errors should work the same with throwOnError 1`] = `[FetchError: request to http://foo.invalid/user?select=* failed, reason: getaddrinfo ENOTFOUND foo.invalid]`;

exports[`don't mutate PostgrestClient.headers 1`] = `null`;

exports[`embedded filters embedded eq 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded filters embedded or 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded filters embedded or with and 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded select 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded transforms embedded limit 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded transforms embedded order 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded transforms embedded order on multiple columns 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
        Object {
          "channel_id": 1,
          "data": null,
          "id": 1,
          "message": "Hello World 👋",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`embedded transforms embedded range 1`] = `
Object {
  "body": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "messages": Array [
        Object {
          "channel_id": 2,
          "data": null,
          "id": 2,
          "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
          "username": "supabot",
        },
      ],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
    Object {
      "messages": Array [],
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`insert, update, delete with count: 'exact' basic delete count: 'exact' 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": 4,
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`insert, update, delete with count: 'exact' basic delete count: 'exact' 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`insert, update, delete with count: 'exact' bulk insert with count: 'exact' 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": 2,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`insert, update, delete with count: 'exact' bulk insert with count: 'exact' 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`insert, update, delete with count: 'exact' insert with count: 'exact' 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": 1,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`insert, update, delete with count: 'exact' insert with count: 'exact' 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`insert, update, delete with count: 'exact' update with count: 'exact' 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": 4,
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`insert, update, delete with count: 'exact' update with count: 'exact' 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 7,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 8,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`insert, update, delete with count: 'exact' upsert with count: 'exact' 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": 1,
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`insert, update, delete with count: 'exact' upsert with count: 'exact' 2`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 6,
      "message": "foo",
      "username": "supabot",
    },
    Object {
      "channel_id": 2,
      "data": null,
      "id": 3,
      "message": "foo",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`limit 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`maybeSingle 1`] = `
Object {
  "body": null,
  "count": null,
  "data": null,
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`missing table 1`] = `
Object {
  "body": null,
  "count": null,
  "data": null,
  "error": Object {
    "code": "42P01",
    "details": null,
    "hint": null,
    "message": "relation \\"public.missing_table\\" does not exist",
  },
  "status": 404,
  "statusText": "Not Found",
}
`;

exports[`on_conflict insert 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`order 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`order on multiple columns 1`] = `
Object {
  "body": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "channel_id": 2,
      "data": null,
      "id": 2,
      "message": "Perfection is attained, not when there is nothing more to add, but when there is nothing left to take away.",
      "username": "supabot",
    },
    Object {
      "channel_id": 1,
      "data": null,
      "id": 1,
      "message": "Hello World 👋",
      "username": "supabot",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`range 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`select on insert 1`] = `
Object {
  "body": Array [
    Object {
      "status": "ONLINE",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "status": "ONLINE",
    },
  ],
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`select on stored procedure 1`] = `
Object {
  "body": Array [
    Object {
      "status": "ONLINE",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "status": "ONLINE",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`select with count:exact 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "count": 4,
  "data": Array [
    Object {
      "age_range": "[1,2)",
      "catchphrase": "'cat' 'fat'",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'cat'",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "catchphrase": "'bat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "catchphrase": "'fat' 'rat'",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`select with head:true 1`] = `
Object {
  "body": null,
  "count": null,
  "data": null,
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`select with head:true, count:estimated 1`] = `
Object {
  "body": null,
  "count": Any<Number>,
  "data": null,
  "error": null,
  "status": 206,
  "statusText": "Partial Content",
}
`;

exports[`select with head:true, count:exact 1`] = `
Object {
  "body": null,
  "count": 4,
  "data": null,
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`select with head:true, count:planned 1`] = `
Object {
  "body": null,
  "count": Any<Number>,
  "data": null,
  "error": null,
  "status": 206,
  "statusText": "Partial Content",
}
`;

exports[`single 1`] = `
Object {
  "body": Object {
    "age_range": "[1,2)",
    "catchphrase": "'cat' 'fat'",
    "data": null,
    "status": "ONLINE",
    "username": "supabot",
  },
  "count": null,
  "data": Object {
    "age_range": "[1,2)",
    "catchphrase": "'cat' 'fat'",
    "data": null,
    "status": "ONLINE",
    "username": "supabot",
  },
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`single on insert 1`] = `
Object {
  "body": Object {
    "age_range": null,
    "catchphrase": null,
    "data": null,
    "status": "ONLINE",
    "username": "foo",
  },
  "count": null,
  "data": Object {
    "age_range": null,
    "catchphrase": null,
    "data": null,
    "status": "ONLINE",
    "username": "foo",
  },
  "error": null,
  "status": 201,
  "statusText": "Created",
}
`;

exports[`stored procedure 1`] = `
Object {
  "body": "ONLINE",
  "count": null,
  "data": "ONLINE",
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`stored procedure returns void 1`] = `
Object {
  "body": null,
  "count": null,
  "data": null,
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`stored procedure with count: 'exact' 1`] = `
Object {
  "body": "ONLINE",
  "count": 1,
  "data": "ONLINE",
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`switch schema 1`] = `
Object {
  "body": Array [
    Object {
      "age_range": "[1,2)",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
    Object {
      "age_range": "[20,40)",
      "data": null,
      "status": "ONLINE",
      "username": "leroyjenkins",
    },
  ],
  "count": null,
  "data": Array [
    Object {
      "age_range": "[1,2)",
      "data": null,
      "status": "ONLINE",
      "username": "supabot",
    },
    Object {
      "age_range": "[25,35)",
      "data": null,
      "status": "OFFLINE",
      "username": "kiwicopple",
    },
    Object {
      "age_range": "[25,35)",
      "data": null,
      "status": "ONLINE",
      "username": "awailas",
    },
    Object {
      "age_range": "[20,30)",
      "data": null,
      "status": "ONLINE",
      "username": "dragarcia",
    },
    Object {
      "age_range": "[20,40)",
      "data": null,
      "status": "ONLINE",
      "username": "leroyjenkins",
    },
  ],
  "error": null,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`throwOnError throws errors instead of returning them 1`] = `
Object {
  "code": "42P01",
  "details": null,
  "hint": null,
  "message": "relation \\"public.missing_table\\" does not exist",
}
`;
